--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <script type="text/javascript">
     (function(){
       let canvas = document.getElementById('main');
+      // canvas.width = window.innerWidth;
+      // canvas.height = window.innerHeight;
       canvas.width = 800;
       canvas.height = 800;
     })();
